[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lab-charts"
version = "0.1.0"
description = "Local and CI orchestration for lab Helm wrapper charts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10",
  "pyyaml>=6.0",
  "rich>=13.9",
  "typer>=0.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
lab-charts = "lab_charts.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_charts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
